<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#08DFA0"
    tools:context="com.example.rohitgiri.assignment41.MainActivity">

   <EditText
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/e1"
       android:layout_marginTop="160dp"
       android:background="@color/white"
       android:textSize="25dp"
       android:hint="Email"
       android:layout_marginLeft="12dp"
       android:layout_marginRight="12dp"
       />
    <EditText
        android:id="@+id/e2"
        android:layout_below="@+id/e1"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:textSize="25dp"
        android:hint="Password"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/t2"
        android:gravity="center"
        android:layout_below="@+id/e2"
        android:layout_marginTop="20dp"
         android:textSize="25dp"
        android:layout_width="match_parent"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_height="wrap_content"
        android:text="LOGIN"
        android:textColor="@color/main"
        android:background="@color/white"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />
    <TextView
        android:id="@+id/t3"
        android:gravity="center"
        android:layout_below="@+id/t2"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Not a Member? Sign up now"
        android:textColor="@color/white"
        android:background="@color/main"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp" />


</RelativeLayout>
